--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.11.16"
+  },
+  "devDependencies": {
+   
+    "nodemon": "^2.0.6"
   }
 }
